# goit-pythonweb-hw-08

./: pyproject.toml
migrations/: env.py
src/conf/: config.py
